--- a/src/google-cloud-cli/devcontainer-feature.json
+++ b/src/google-cloud-cli/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "google-cloud-cli",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "name": "google-cloud-cli",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/google-cloud-cli",
   "description": "Google Cloud CLI.",
@@ -38,10 +38,7 @@
   },
   "customizations": {
     "vscode": {
-      "extensions": [
-        "github.vscode-github-actions",
-        "GitHub.vscode-pull-request-github"
-      ]
+      "extensions": ["GoogleCloudTools.cloudcode"]
     }
   },
   "installsAfter": [
