--- a/src/shellcheck/devcontainer-feature.json
+++ b/src/shellcheck/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "shellcheck",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "name": "shellcheck",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/shellcheck",
   "description": "ShellCheck, a static analysis tool for shell scripts.",
@@ -10,6 +10,11 @@
       "description": "Version to install. If not specified, the latest version will be installed.",
       "proposals": ["0.9.0"],
       "type": "string"
+    }
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": ["mads-hartmann.bash-ide-vscode"]
     }
   },
   "installsAfter": ["ghcr.io/nikaro/features/packages"]
