--- a/src/poetry/devcontainer-feature.json
+++ b/src/poetry/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "poetry",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "name": "poetry",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/poetry",
   "description": "Python packaging and dependency management made easy.",
@@ -25,7 +25,7 @@
   },
   "customizations": {
     "vscode": {
-      "extensions": ["ms-python.python", "ms-python.vscode-pylance"]
+      "extensions": ["ms-python.python"]
     }
   },
   "installsAfter": [
