--- a/src/sops/devcontainer-feature.json
+++ b/src/sops/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "sops",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "name": "sops",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/sops",
   "description": "Simple and flexible tool for managing secrets.",
@@ -10,6 +10,11 @@
       "description": "Version to install. If not specified, the latest version will be installed.",
       "proposals": ["3.7.3"],
       "type": "string"
+    }
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": ["signageos.signageos-vscode-sops"]
     }
   },
   "installsAfter": ["ghcr.io/nikaro/features/packages"]
