--- a/src/actionlint/devcontainer-feature.json
+++ b/src/actionlint/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "actionlint",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "name": "actionlint",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/actionlint",
   "description": "Static checker for GitHub Actions workflow files.",
@@ -19,7 +19,17 @@
   },
   "customizations": {
     "vscode": {
-      "extensions": ["github.vscode-github-actions", "redhat.vscode-yaml"]
+      "extensions": [
+        "esbenp.prettier-vscode",
+        "github.vscode-github-actions",
+        "redhat.vscode-yaml"
+      ],
+      "settings": {
+        "[yaml]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode",
+          "editor.formatOnSave": true
+        }
+      }
     }
   },
   "installsAfter": ["ghcr.io/nikaro/features/packages"]
