--- a/src/ansible-lint/devcontainer-feature.json
+++ b/src/ansible-lint/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "ansible-lint",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "name": "ansible-lint",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/ansible-lint",
   "description": "Linter for Ansible.",
@@ -25,7 +25,17 @@
   },
   "customizations": {
     "vscode": {
-      "extensions": ["redhat.ansible", "redhat.vscode-yaml"]
+      "extensions": [
+        "esbenp.prettier-vscode",
+        "redhat.ansible",
+        "redhat.vscode-yaml"
+      ],
+      "settings": {
+        "[yaml]": {
+          "editor.defaultFormatter": "esbenp.prettier-vscode",
+          "editor.formatOnSave": true
+        }
+      }
     }
   },
   "installsAfter": [
