--- a/src/rye/devcontainer-feature.json
+++ b/src/rye/devcontainer-feature.json
@@ -1,7 +1,7 @@
 {
   "id": "rye",
   "name": "rye",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/rye",
   "description": "Rye is a project and package management solution for Python.",
   "options": {
@@ -23,7 +23,13 @@
   },
   "customizations": {
     "vscode": {
-      "extensions": ["ms-python.python"]
+      "extensions": ["ms-python.python", "tamasfe.even-better-toml"],
+      "settings": {
+        "[toml]": {
+          "editor.defaultFormatter": "tamasfe.even-better-toml",
+          "editor.formatOnSave": true
+        }
+      }
     }
   },
   "installsAfter": ["ghcr.io/nikaro/features/packages"]
