--- a/src/opentofu/devcontainer-feature.json
+++ b/src/opentofu/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "opentofu",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "name": "opentofu",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/opentofu",
   "description": "OpenTofu lets you declaratively manage your cloud infrastructure.",
@@ -14,7 +14,19 @@
   },
   "customizations": {
     "vscode": {
-      "extensions": ["gamunu.opentofu"]
+      "extensions": ["gamunu.opentofu"],
+      "settings": {
+        "[opentofu]": {
+          "editor.defaultFormatter": "gamunu.opentofu",
+          "editor.formatOnSave": true,
+          "editor.formatOnSaveMode": "file"
+        },
+        "[opentofu-vars]": {
+          "editor.defaultFormatter": "gamunu.opentofu",
+          "editor.formatOnSave": true,
+          "editor.formatOnSaveMode": "file"
+        }
+      }
     }
   },
   "installsAfter": ["ghcr.io/nikaro/features/packages"]
