--- a/src/opentofu/devcontainer-feature.json
+++ b/src/opentofu/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "opentofu",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "name": "opentofu",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/opentofu",
   "description": "OpenTofu lets you declaratively manage your cloud infrastructure.",
@@ -16,12 +16,12 @@
     "vscode": {
       "extensions": ["gamunu.opentofu"],
       "settings": {
-        "[opentofu]": {
+        "[terraform]": {
           "editor.defaultFormatter": "gamunu.opentofu",
           "editor.formatOnSave": true,
           "editor.formatOnSaveMode": "file"
         },
-        "[opentofu-vars]": {
+        "[terraform-vars]": {
           "editor.defaultFormatter": "gamunu.opentofu",
           "editor.formatOnSave": true,
           "editor.formatOnSaveMode": "file"
