fix(opentofu): specify tofu binary path

--- a/src/opentofu/devcontainer-feature.json
+++ b/src/opentofu/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "opentofu",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "name": "opentofu",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/opentofu",
   "description": "OpenTofu lets you declaratively manage your cloud infrastructure.",
@@ -25,7 +25,8 @@
           "editor.defaultFormatter": "gamunu.opentofu",
           "editor.formatOnSave": true,
           "editor.formatOnSaveMode": "file"
-        }
+        },
+        "opentofu.languageServer.opentofu.path": "/usr/local/bin/tofu"
       }
     }
   },
