--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,12 +5,17 @@ on:
     branches: [main]
     paths:
       - src/**
-      - test/**
   workflow_dispatch:
 
 jobs:
+  ci:
+    name: CI
+    uses: ./.github/workflows/ci.yml
+    secrets: inherit
+
   deploy:
     name: Release
+    needs: [ci]
     if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     permissions:
