--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,9 @@
 name: CI
 
 on:
-  push:
-    branches: [main]
-    paths:
-      - src/**
-      - test/**
   pull_request:
-    paths:
-      - src/**
-      - test/**
+    branches: [main]
+  workflow_call:
   workflow_dispatch:
 
 jobs:
@@ -20,10 +14,13 @@ jobs:
       contents: read
     steps:
       - name: Checkout
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+
+      - name: Run pre-commit
+        uses: nikaro/actions/pre-commit@07ebbc2697c1505689d0c8fab407f3f18b325788 # 1.3.15
 
       - name: Validate devcontainer-feature.json files
-        uses: devcontainers/action@2858bb873d82d653b033bfe0977fb8a16708b0c3 # v1
+        uses: devcontainers/action@2858bb873d82d653b033bfe0977fb8a16708b0c3 # v1.4.1
         with:
           validate-only: true
           base-path-to-features: ./src
