--- a/src/node/devcontainer-feature.json
+++ b/src/node/devcontainer-feature.json
@@ -1,9 +1,9 @@
 {
   "id": "node",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "name": "node",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/node",
-  "description": "Simple Python version management.",
+  "description": "Node.js® is an open-source, cross-platform JavaScript runtime environment.",
   "options": {
     "version": {
       "default": "",
