--- a/src/aws-cli/devcontainer-feature.json
+++ b/src/aws-cli/devcontainer-feature.json
@@ -1,6 +1,6 @@
 {
   "id": "aws-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "name": "aws-cli",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/aws-cli",
   "description": "AWS Command Line Interface.",
@@ -25,7 +25,10 @@
   },
   "customizations": {
     "vscode": {
-      "extensions": ["AmazonWebServices.aws-toolkit-vscode"]
+      "extensions": ["AmazonWebServices.aws-toolkit-vscode"],
+      "settings": {
+        "aws.telemetry": false
+      }
     }
   },
   "installsAfter": ["ghcr.io/nikaro/features/packages"]
