--- a/src/base/devcontainer-feature.json
+++ b/src/base/devcontainer-feature.json
@@ -1,7 +1,7 @@
 {
   "id": "base",
   "name": "base",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/base",
   "description": "My personal base settings/extenstions.",
   "options": {
@@ -26,7 +26,14 @@
         "[jsonc]": {
           "editor.defaultFormatter": "esbenp.prettier-vscode",
           "editor.formatOnSave": true
-        }
+        },
+        "extensions.ignoreRecommendations": true,
+        "git.autofetch": true,
+        "redhat.telemetry.enabled": false,
+        "remote.autoForwardPorts": false,
+        "terminal.integrated.macOptionIsMeta": true,
+        "window.autoDetectColorScheme": true,
+        "workbench.startupEditor": "none"
       }
     }
   }
