--- a/src/base/devcontainer-feature.json
+++ b/src/base/devcontainer-feature.json
@@ -1,7 +1,7 @@
 {
   "id": "base",
   "name": "base",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "documentationURL": "https://github.com/nikaro/features/tree/main/src/base",
   "description": "My personal base settings/extenstions.",
   "options": {
@@ -13,11 +13,7 @@
   },
   "customizations": {
     "vscode": {
-      "extensions": [
-        "EditorConfig.EditorConfig",
-        "esbenp.prettier-vscode",
-        "GitHub.copilot"
-      ],
+      "extensions": ["EditorConfig.EditorConfig", "esbenp.prettier-vscode"],
       "settings": {
         "[json]": {
           "editor.defaultFormatter": "esbenp.prettier-vscode",
