--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
 
       - name: Run pre-commit
         uses: nikaro/actions/pre-commit@778344cb9ff71fc2237011ac731622e1da3a109a # 1.6.4
+        with:
+          python-version: 3.x
 
       - name: Validate devcontainer-feature.json files
         uses: devcontainers/action@528049dce833673f136ddfc09c2720d450029a6b # v1.4.2
