--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -2,5 +2,8 @@
 extends: default
 
 rules:
-  line-length:
-    level: warning
+  comments:
+    min-spaces-from-content: 1
+  line-length: disable
+  truthy:
+    check-keys: false
